--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,34 +12,40 @@
 
 <body>
 
-  <div id="game"></div>
+  <div id="game">
+    <div id="Chat">
+      <input id="message" type="text" placeholder="Chat escribe aquí">
+    </div>
+  </div>
   <script src="game.js"></script>
 
-  <div id="Chat">
-    <input id="message" type="text" placeholder="Chat escribe aquí">
-    <button id="SendMessage">Enviar</button>
-  </div>
 
 </body>
 <style>
-  #body {
-    width: 100%;
-    height: 700px;
-  }
-
   #Chat {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    bottom: 20px;
+    left: 20px;
     width: 30%;
-    height: 100%;
+    height: 80%;
     overflow-y: auto;
-    background: rgba(0, 0, 0, 0.5);
     color: white;
     padding: 10px;
     border-radius: 8px;
-    z-index: 5;
+    z-index: 6;
     /* menor que el canvas */
+  }
+
+  #message {
+    position: absolute;
+    bottom: 20px;
+    width: 70%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 10px;
+    border: 2px solid black;
+    z-index: 99999;
   }
 </style>
 
